--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nwidart/user",
+    "name": "zbin95/user-module",
     "description": "",
     "type": "laravel-module",
     "authors": [
